# QML_VS_Template

./: CMakeLists.txt  README.md  main.cpp  qml.qrc
qml/: main.qml
